--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.2",
+    "@mui/material": "^5.14.3",
     "@mui/material-next": "^6.0.0-alpha.94",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "bootstrap5": "^1.1.9",
     "framer-motion": "^10.12.21",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
